--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^7.1.2",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "sequelize": "^6.3.5"
   }
 }
