--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
+    "sequelize": "^6.3.5"
   }
 }
