--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
+    "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "socket.io": "^4.7.2"
   }
 }
