--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mysql2": "^3.6.1",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "nodemon": "^3.0.1",
     "sequelize": "^6.3.5",
     "socket.io": "^4.7.2",
     "bcrypt": "^5.0.0",
-    "connect-session-sequelize": "^7.0.4",
-    "express-session": "^1.17.1"
+    "connect-session-sequelize": "^7.0.4"
   }
 }
