--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
     "sequelize": "^6.3.5",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   }
 }
